<resources>
    <string name="app_name">CS2340A_Team19</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_meals">Meals</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_personal">Personal Info</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male:</string>
    <string name="Female">Female:</string>
    <string name="Other">Other:</string>
    <string name="input_personal_button">"Button that leads to screen to input personal info"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_ingredient_input_form">Add Ingredient</string>
    <string name="label_recipe_input_form">Add Recipe</string>
    <string name="expansion_desc">indicator that card can be expanded to view more information</string>
    <string name="status_cook">Cook Recipe</string>
    <string name="status_buy">Add to List</string>
</resources>
