<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cs2340a_team19.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_personalInformationFragment"
            app:destination="@id/personalInformationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.cs2340a_team19.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" >
        <action
            android:id="@+id/action_navigation_recipe_to_add_recipe_fragment"
            app:destination="@id/add_recipe_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.example.cs2340a_team19.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients" >
        <action
            android:id="@+id/action_navigation_ingredients_to_ingredientFeaturesFragment"
            app:destination="@id/ingredient_features_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_meals"
        android:name="com.example.cs2340a_team19.ui.meals.MealsFragment"
        android:label="@string/title_meals"
        tools:layout="@layout/fragment_meals" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.cs2340a_team19.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />
    <fragment
        android:id="@+id/personalInformationFragment"
        android:name="com.example.cs2340a_team19.ui.personalInfo.PersonalInformationFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal_information" />
    <fragment
        android:id="@+id/ingredient_features_fragment"
        android:name="com.example.cs2340a_team19.ui.ingredients.IngredientInputFormFragment"
        android:label="@string/label_ingredient_input_form"
        tools:layout="@layout/fragment_input_ingredient_form" />
    <fragment
        android:id="@+id/add_recipe_fragment"
        android:name="com.example.cs2340a_team19.ui.recipe.AddRecipeFragment"
        android:label="@string/label_recipe_input_form"
        tools:layout="@layout/fragment_add_recipe" />


</navigation>